--- a/nb/gpt-oss-(20B)-Fine-tuning.ipynb
+++ b/nb/gpt-oss-(20B)-Fine-tuning.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/trizist/--deploy/blob/main/nb/gpt-oss-(20B)-Fine-tuning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "FxljqLUTRC90"
       },
       "source": [
@@ -993,8 +983,6 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "iQb5_H4cRC-V",
-        "outputId": "e60e3f89-c331-4bec-ce50-db84eaf179dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -1011,7 +999,9 @@
             "6bb9c45e5f8d4c97844ef4e302e00361",
             "3f4cabcbeff84f84a384cf7aa5edd9d9"
           ]
-        }
+        },
+        "id": "iQb5_H4cRC-V",
+        "outputId": "e60e3f89-c331-4bec-ce50-db84eaf179dd"
       },
       "outputs": [
         {
@@ -1053,12 +1043,12 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "1KYSCYVkRC-W",
-        "outputId": "d56e91d6-df70-402e-c82b-e59a8c2eb5d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 701
-        }
+        },
+        "id": "1KYSCYVkRC-W",
+        "outputId": "d56e91d6-df70-402e-c82b-e59a8c2eb5d0"
       },
       "outputs": [
         {
@@ -1092,12 +1082,12 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "3BdiUaGsRC-W",
-        "outputId": "00220229-17aa-4874-d9fb-f94cafe47e61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        }
+        },
+        "id": "3BdiUaGsRC-W",
+        "outputId": "00220229-17aa-4874-d9fb-f94cafe47e61"
       },
       "outputs": [
         {
@@ -1122,11 +1112,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "-QdpV_dPRC-X",
-        "outputId": "7df00bf5-dc76-4274-f027-553ff603cc1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-QdpV_dPRC-X",
+        "outputId": "7df00bf5-dc76-4274-f027-553ff603cc1e"
       },
       "outputs": [
         {
@@ -1586,8 +1576,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": ".venv",
